# anp

./: .gitignore  AGENTS.md  CLAUDE.md  README.cn.md  README.md  pyproject.toml
.github/workflows/: rust-python-interop.yml
anp/: __init__.py
anp/anp_crawler/: anp_client.py
anp/authentication/: __init__.py  did_resolver.py  did_wba.py  did_wba_authenticator.py  did_wba_verifier.py  federation.py  http_signatures.py  verification_methods.py
anp/direct_e2ee/: __init__.py  client.py  errors.py  models.py  prekey_manager.py  session.py  store.py
anp/e2e_encryption_hpke/: CLAUDE.md  __init__.py  crypto.py  group_session.py  hpke.py  key_manager.py  key_pair.py  message_builder.py  message_parser.py  models.py  proof.py  ratchet.py  seq_manager.py  session.py
anp/e2e_encryption_v2/: CLAUDE.md  __init__.py  key_manager.py  message_builder.py  message_parser.py  models.py  session.py
anp/fastanp/: ad_generator.py  middleware.py  models.py
anp/openanp/: middleware.py
anp/proof/: __init__.py  did_wba_binding.py  group_receipt.py  im.py  object_proof.py  proof.py  rfc9421_origin.py
anp/unittest/anp_crawler/: test_anp_client_auth.py
anp/unittest/authentication/: test_authentication.py  (+6 more)
anp/utils/: crypto_tool.py
anp/wns/: __init__.py  binding.py  exceptions.py  models.py  resolver.py  validator.py
dart/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
dart/doc/: dependency_matrix.md  direct_e2ee_deferred.md  go_to_dart_api_mapping.md  platform_support.md
dart/example/: authentication_http_signature.dart  create_did_document.dart  proof.dart  wns.dart
dart/lib/: anp.dart
dart/tool/: interop.dart
docs/: examples.cn.md  examples.md
docs/did/: getting_started.md
docs/did_public/: did_a.json  did_b.json  private_a.pem  private_b.pem
docs/e2e/: 05-e2e.md  direct-e2ee-p5-sdk.md  group-e2ee-p6-anp-mls.md
docs/pr-notes/: group-e2ee-p6-conformance-before-discovery.md  group-e2ee-v1-pr-closeout.md
golang/: README.cn.md  README.md  base64.go  doc.go  go.mod  go.sum  key_material.go  key_material_test.go  version.go
golang/authentication/: did_resolver.go  did_wba.go  did_wba_authenticator.go  did_wba_test.go  did_wba_verifier.go  federation.go  http_signatures.go  types.go  verification_methods.go
golang/direct_e2ee/: aad.go  bundle.go  client.go  direct_e2ee_test.go  errors.go  helpers.go  models.go  prekey_manager.go  ratchet.go  session.go  shared_vectors_test.go  store.go  x3dh.go
golang/docs/: api.md  direct_e2ee-guide.md  release-notes.md
golang/group_e2ee/: exec_provider.go  exec_provider_test.go  models.go  models_test.go
golang/integration/: direct_e2ee_interop_test.go  interop_test.go  python_direct_e2ee_fixture.py  python_verify_go_direct_e2ee_fixture.py
golang/proof/: did_wba_binding.go  group_receipt.go  im.go  im_test.go  object_proof.go  proof.go  proof_test.go  rfc9421_origin.go  rfc9421_origin_test.go
golang/wns/: binding.go  resolver.go  types.go  validator.go  wns_test.go
rust/: Cargo.toml  README.md
rust/examples/: create_did_document.rs  direct_e2ee_interop_cli.rs  direct_e2ee_verify_fixture.rs  interop_cli.rs  interop_server.rs  proof_example.rs  wns_example.rs
rust/src/: canonical_json.rs  keys.rs  lib.rs
rust/src/authentication/: did_resolver.rs  did_wba.rs  did_wba_authenticator.rs  did_wba_verifier.rs  federation.rs  http_signatures.rs  mod.rs  verification_methods.rs
rust/src/direct_e2ee/: aad.rs  bundle.rs  envelope.rs  errors.rs  helpers.rs  mod.rs  models.rs  ratchet.rs  session.rs  store.rs  x3dh.rs
rust/src/group_e2ee/: mod.rs  operations.rs  storage.rs
rust/src/group_e2ee/operations/: typed.rs
rust/src/proof/: did_wba_binding.rs  group_receipt.rs  im.rs  mod.rs  object_proof.rs  rfc9421_origin.rs
rust/src/wns/: binding.rs  errors.rs  mod.rs  models.rs  resolver.rs  validator.rs
rust/tests/: authentication_tests.rs  direct_e2ee_shared_vectors.rs  group_e2ee_typed_operations_tests.rs  key_pem_tests.rs  proof_tests.rs  python_interop_tests.rs  python_network_interop_tests.rs  wns_tests.rs
rust/tests/common/: mod.rs
skills/anp-agent/: requirements.txt
skills/anp-multilang-release/: SKILL.md
testdata/direct_e2ee/: README.md  p5_shared_vectors.json
testdata/group_e2ee/: did_wba_binding_golden.json
tests/: rust_interop_config.json
tools/: migrate_anp_key_pem.py
tools/did_generater/: generate_did_doc.py
typescript/ts_sdk/: .gitignore  README.md  package-lock.json  package.json
(+180 files in other folders)
