[project]
name = "anp"
version = "0.8.8"
description = "An SDK that enables agents to connect with each other, allowing them to perform identity authentication, end-to-end encrypted communication, automatic protocol negotiation based on LLMs, and efficient data exchange."
authors = [
    {name = "changshan", email = "chgaowei@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["agent", "protocol", "authentication", "encryption", "communication"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "ecdsa>=0.19.0",
    "cryptography>=43.0.3",
    "asn1crypto>=1.5.1",
    "base58>=2.1.1",
    "aiohttp>=3.10.10",
    "requests>=2.32.3",
    "websockets>=13.1",
    "pydantic>=2.9.2,<3.0.0",
    "python-dotenv>=1.0.1",
    "jsonschema>=4.23.0",
    "canonicaljson>=2.0.0",
    "jcs>=0.2.1",
    "pyjwt>=2.9.0",
]

[project.optional-dependencies]
api = [
    "openai>=1.54.3",
    "fastapi>=0.115.4,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://agent-network-protocol.com/"
Repository = "https://github.com/agent-network-protocol/AgentConnect"
Documentation = "https://github.com/agent-network-protocol/AgentNetworkProtocol"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/anp",
    "/README.md",
    "/README.cn.md",
    "/LICENSE",
]
exclude = [
    "/anp/**/*.md",
    "/anp/**/__pycache__",
    "/anp/**/*.pyc",
    "/anp/**/test",
    "/anp/**/test/**",
    "/anp/**/tests",
    "/anp/**/tests/**",
    "/anp/unittest",
    "/anp/unittest/**",
]

[tool.hatch.build.targets.wheel]
packages = ["anp"]
